[gd_scene load_steps=20 format=3 uid="uid://cq6mlf3c8lkot"]

[ext_resource type="PackedScene" uid="uid://c62j7aiwvcjda" path="res://Scenes/Menu/hud.tscn" id="1_ty766"]
[ext_resource type="TileSet" uid="uid://dfn081kuhi648" path="res://Data/base_tileset.tres" id="2_0nsr8"]
[ext_resource type="PackedScene" uid="uid://b0byka5d5aixx" path="res://Scenes/Player/player.tscn" id="3_sun5u"]
[ext_resource type="Script" path="res://addons/cinematic_camera_2d/scripts/cinematic_camera_2d.gd" id="4_hcgre"]
[ext_resource type="Script" path="res://addons/cinematic_camera_2d/scripts/virtual_camera_2d.gd" id="5_qv14s"]
[ext_resource type="PackedScene" uid="uid://dt8k0y2ux3c2k" path="res://Scenes/Props/one_way_platform.tscn" id="6_buy1g"]
[ext_resource type="PackedScene" uid="uid://cqow16cipyw6e" path="res://Scenes/Player/pickup_upgrade.tscn" id="7_41y4p"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="8_byl6j"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="9_2p5ge"]
[ext_resource type="Texture2D" uid="uid://d2mosp34qr7db" path="res://Art/Environment/Thorns/thorns.png" id="10_4ct2y"]
[ext_resource type="Script" path="res://Script/Levels/next_area_path.gd" id="11_aj38m"]
[ext_resource type="Resource" uid="uid://lvwmfwkygib3" path="res://Data/Passage/level_0/scene_0_6.tres" id="12_cl1j2"]
[ext_resource type="Resource" uid="uid://claqc3vwlxgxx" path="res://Data/Passage/level_0/scene_0_3.tres" id="13_oro8f"]

[sub_resource type="Resource" id="Resource_8e3ye"]
script = ExtResource("9_2p5ge")
damage = 1.0
impact = 0.0
knockback = 300.0
sender_position = Vector2(0, 0)
take_damage_rule = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5k8c"]
size = Vector2(192, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3wus"]
atlas = ExtResource("10_4ct2y")
region = Rect2(5.77194, 319.888, 503.118, 195.657)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo1bh"]
size = Vector2(544, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pf2uw"]
size = Vector2(64, 192)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ni1hb"]
load_path = "res://.godot/imported/Gradient light.png-9aaf2fd178fa7e8c49f99711a8b8b0aa.ctex"

[node name="level_0_6" type="Node2D"]

[node name="HUD" parent="." instance=ExtResource("1_ty766")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_0nsr8")
format = 2
layer_0/tile_data = PackedInt32Array(1048576, 65536, 2, 1048577, 65536, 2, 1048578, 65536, 2, 983041, 65536, 0, 983040, 262144, 1, 983042, 65536, 0, 1048575, 0, 1, 1114111, 0, 2, 983039, 0, 1, 917503, 0, 1, 851967, 0, 1, 786431, 0, 1, 917504, 131072, 1, 851968, 131072, 1, 786432, 131072, 1, 720896, 131072, 1, 655360, 262144, 0, 589824, 262144, 1, 524288, 131072, 1, 458752, 131072, 1, 393216, 131072, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 1, 655359, 0, 1, 720895, 0, 1, 983043, 65536, 0, 983044, 65536, 0, 983045, 65536, 0, 983046, 65536, 0, 983047, 65536, 0, 983048, 65536, 0, 983049, 65536, 0, 983050, 65536, 0, 983051, 65536, 0, 983052, 327680, 1, 983053, 65536, 1, 983054, 65536, 1, 983055, 65536, 1, 983056, 65536, 1, 983057, 65536, 1, 983058, 65536, 1, 983059, 65536, 1, 1048583, 65536, 2, 1048584, 65536, 2, 1048585, 65536, 2, 1048586, 65536, 2, 1048587, 65536, 2, 1048588, 65536, 2, 1048589, 65536, 2, 1048590, 65536, 2, 1048591, 65536, 2, 1048595, 65536, 2, 1048594, 65536, 2, 1048593, 65536, 2, 1048592, 65536, 2, 1048582, 65536, 2, 1048581, 65536, 2, 1048580, 65536, 2, 1048579, 65536, 2, 65535, 0, 0, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 327679, 0, 1, 393215, 0, 1, 327680, 131072, 1, 262144, 262144, 0, 196608, 65536, 1, 131072, 65536, 1, 65536, 65536, 1, 0, 65536, 0, 65565, 65536, 1, 29, 65536, 0, 65564, 65536, 1, 28, 65536, 0, 65563, 327680, 0, 27, 65536, 0, 65562, 65536, 2, 26, 65536, 0, 65561, 65536, 2, 25, 65536, 0, 65560, 65536, 2, 24, 65536, 0, 65559, 65536, 2, 23, 65536, 0, 65558, 65536, 2, 22, 65536, 0, 65557, 65536, 2, 21, 65536, 0, 65556, 65536, 2, 20, 65536, 0, 65555, 65536, 2, 19, 65536, 0, 65554, 65536, 2, 18, 65536, 0, 65553, 65536, 2, 17, 65536, 0, 65552, 65536, 2, 16, 65536, 0, 65551, 65536, 2, 15, 65536, 0, 65550, 65536, 2, 14, 65536, 0, 65549, 65536, 2, 13, 65536, 0, 65548, 65536, 2, 12, 65536, 0, 65547, 65536, 2, 11, 65536, 0, 65546, 65536, 2, 10, 65536, 0, 65545, 65536, 2, 9, 65536, 0, 65544, 65536, 2, 8, 65536, 0, 65543, 65536, 2, 7, 65536, 0, 65542, 65536, 2, 6, 65536, 0, 65541, 65536, 2, 5, 65536, 0, 65540, 262144, 0, 4, 65536, 0, 65539, 65536, 1, 3, 65536, 0, 65538, 65536, 1, 2, 65536, 0, 65537, 65536, 1, 1, 65536, 0, 1048605, 65536, 2, 983069, 65536, 0, 1048604, 65536, 2, 983068, 65536, 0, 1048603, 65536, 2, 983067, 262144, 1, 1048602, 65536, 2, 983066, 65536, 1, 1048601, 65536, 2, 983065, 65536, 1, 1048600, 65536, 2, 983064, 65536, 1, 1048599, 65536, 2, 983063, 65536, 1, 1048598, 65536, 2, 983062, 65536, 1, 1048597, 65536, 2, 983061, 65536, 1, 1048596, 65536, 2, 983060, 65536, 1, 30, 65536, 0, 65566, 65536, 1, 131102, 65536, 1, 196638, 65536, 1, 262174, 65536, 1, 327710, 65536, 1, 393246, 65536, 1, 458782, 65536, 1, 524318, 327680, 0, 589854, 0, 1, 983070, 65536, 0, 1048606, 65536, 2, 1048607, 65536, 2, 983071, 65536, 0, 589855, 131072, 2, 524319, 131072, 1, 458783, 131072, 1, 393247, 131072, 1, 327711, 131072, 1, 262175, 131072, 1, 196639, 131072, 1, 131103, 262144, 0, 65567, 65536, 1, 31, 65536, 0, 57, 131072, 0, 56, 65536, 0, 55, 65536, 0, 54, 65536, 0, 53, 262144, 1, 52, 65536, 0, 65588, 65536, 2, 65587, 262144, 0, 65586, 65536, 1, 65585, 65536, 1, 65584, 65536, 1, 65583, 327680, 0, 65582, 65536, 2, 65581, 262144, 0, 65580, 65536, 1, 65579, 65536, 1, 65578, 65536, 1, 65577, 65536, 1, 65576, 327680, 0, 65575, 65536, 2, 65574, 262144, 0, 65573, 65536, 1, 65572, 65536, 1, 65571, 65536, 1, 65570, 65536, 1, 33, 65536, 0, 32, 65536, 0, 34, 65536, 0, 35, 65536, 0, 36, 65536, 0, 37, 65536, 0, 38, 65536, 0, 39, 65536, 0, 40, 65536, 0, 41, 65536, 0, 42, 65536, 0, 43, 65536, 0, 44, 65536, 0, 45, 65536, 0, 46, 65536, 0, 47, 65536, 0, 48, 65536, 0, 49, 65536, 0, 50, 65536, 0, 51, 65536, 0, 65569, 65536, 1, 65568, 65536, 1, 131104, 65536, 2, 131105, 65536, 2, 131106, 65536, 2, 131107, 65536, 2, 131108, 65536, 2, 131109, 65536, 2, 131110, 131072, 2, 131112, 0, 2, 131113, 327680, 0, 196649, 0, 2, 262186, 131072, 2, 196650, 262144, 0, 196651, 131072, 2, 131115, 262144, 0, 131116, 65536, 2, 131117, 131072, 2, 131114, 65536, 1, 131119, 0, 2, 131120, 65536, 2, 196657, 0, 2, 196658, 131072, 2, 131122, 65536, 1, 131123, 131072, 1, 65589, 327680, 0, 131121, 327680, 0, 131125, 0, 1, 196661, 0, 1, 196662, 65536, 1, 262198, 65536, 1, 262199, 65536, 1, 196663, 65536, 1, 131127, 65536, 1, 131128, 65536, 1, 65592, 65536, 1, 65591, 65536, 1, 65590, 65536, 1, 131126, 65536, 1, 196664, 65536, 1, 262200, 65536, 1, 262201, 131072, 1, 196665, 131072, 1, 131129, 131072, 1, 65593, 131072, 1, 327737, 131072, 1, 393273, 131072, 1, 458809, 131072, 1, 327736, 65536, 1, 327735, 65536, 1, 393271, 65536, 1, 458807, 65536, 1, 458808, 65536, 1, 524344, 65536, 1, 589880, 65536, 1, 589881, 131072, 1, 655417, 262144, 1, 655418, 65536, 0, 720953, 65536, 2, 655416, 65536, 1, 589879, 65536, 1, 524343, 65536, 1, 458806, 0, 1, 393270, 327680, 0, 393269, 0, 2, 327733, 0, 1, 262197, 0, 1, 327734, 65536, 1, 524342, 0, 1, 589878, 0, 1, 655414, 0, 1, 720950, 0, 2, 720951, 65536, 2, 720952, 65536, 2, 655415, 65536, 1, 1048635, 131072, 2, 983099, 131072, 0, 1048634, 65536, 2, 983098, 65536, 0, 1048633, 65536, 2, 983097, 65536, 0, 1048632, 65536, 2, 983096, 65536, 0, 1048631, 65536, 2, 983095, 65536, 0, 1048630, 65536, 2, 983094, 65536, 0, 1048629, 65536, 2, 983093, 65536, 0, 1048628, 65536, 2, 983092, 65536, 0, 1048627, 65536, 2, 983091, 65536, 0, 1048626, 65536, 2, 983090, 65536, 0, 1048625, 262144, 0, 983089, 65536, 0, 1048624, 65536, 1, 983088, 65536, 0, 1048623, 65536, 1, 983087, 65536, 0, 1048622, 327680, 1, 1048621, 65536, 0, 1048620, 65536, 0, 1048619, 65536, 0, 1048618, 262144, 1, 1048617, 327680, 1, 1048616, 65536, 0, 1048615, 65536, 0, 1048614, 65536, 0, 1048613, 262144, 1, 983077, 131072, 0, 1048612, 327680, 0, 983076, 65536, 0, 1048611, 65536, 2, 983075, 65536, 0, 1048610, 65536, 2, 983074, 65536, 0, 1048609, 65536, 2, 983073, 65536, 0, 1048608, 65536, 2, 983072, 65536, 0, 524345, 131072, 1, 393272, 65536, 1, 720954, 65536, 2, 720955, 131072, 2, 655419, 131072, 0, 786491, 196608, 2, 852027, 196608, 2, 917563, 196608, 2, 655390, 196608, 3, 524317, 0, 2, 458781, 0, 1, 393245, 0, 1, 327709, 0, 1, 262173, 0, 1, 262172, 196608, 3, 196636, 0, 2, 131100, 327680, 0, 131099, 0, 2, 131101, 65536, 1, 196637, 65536, 1, 917531, 131072, 0, 917530, 65536, 0, 917529, 262144, 1, 851993, 131072, 0, 851992, 262144, 1, 786456, 131072, 0, 786455, 65536, 0, 786454, 262144, 1, 720918, 131072, 0, 720917, 65536, 0, 720916, 65536, 0, 720915, 65536, 0, 720914, 65536, 0, 720913, 65536, 0, 720912, 65536, 0, 720911, 0, 0, 786447, 327680, 1, 786446, 65536, 0, 786445, 0, 0, 851981, 65536, 1, 851980, 0, 0, 917516, 0, 1, 917517, 65536, 1, 917518, 65536, 1, 917519, 65536, 1, 917520, 65536, 1, 917521, 65536, 1, 917522, 65536, 1, 917523, 65536, 1, 917524, 65536, 1, 917525, 65536, 1, 917526, 65536, 1, 917527, 65536, 1, 917528, 65536, 1, 851991, 65536, 1, 851990, 65536, 1, 851989, 65536, 1, 851988, 65536, 1, 851987, 65536, 1, 851986, 65536, 1, 851985, 65536, 1, 851984, 65536, 1, 851983, 65536, 1, 851982, 65536, 1, 786448, 65536, 1, 786449, 65536, 1, 786450, 65536, 1, 786451, 65536, 1, 786452, 65536, 1, 786453, 65536, 1, 1114150, 65536, 2, 1114151, 65536, 2, 1114152, 65536, 2, 1114153, 65536, 2, 1114154, 65536, 2, 1114155, 65536, 2, 1114156, 65536, 2, 1114157, 65536, 2, 1114158, 65536, 2, 1114159, 65536, 2, 1114160, 65536, 2, 1114149, 65536, 2, 1114148, 0, 2, 1114161, 131072, 2, 589862, 0, 0, 655398, 0, 2, 655399, 65536, 2, 655400, 65536, 2, 655401, 65536, 2, 655402, 65536, 2, 655403, 65536, 2, 655404, 65536, 2, 655405, 65536, 2, 655406, 131072, 2, 589870, 131072, 0, 589869, 65536, 0, 589868, 65536, 0, 589867, 65536, 0, 589866, 65536, 0, 589865, 65536, 0, 589864, 65536, 0, 589863, 65536, 0, 983082, 131072, 0, 983081, 0, 0, 983086, 0, 0, 131073, 65536, 1, 131074, 262144, 0, 196609, 262144, 0, 262145, 131072, 2, 196610, 131072, 2, 131075, 65536, 2, 131076, 131072, 2, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 131072, 0, 655361, 65536, 2, 655362, 65536, 2, 655363, 65536, 2, 655364, 131072, 2)

[node name="Player" parent="." instance=ExtResource("3_sun5u")]
position = Vector2(3384, 952)

[node name="CinematicCamera2D" type="Camera2D" parent="." node_paths=PackedStringArray("follow_node", "virtual_camera")]
position = Vector2(648, 720)
zoom = Vector2(1.5, 1.5)
script = ExtResource("4_hcgre")
follow_node = NodePath("../Player")
virtual_camera = NodePath("../VirtualCamera2D")

[node name="VirtualCamera2D" type="Node2D" parent="."]
script = ExtResource("5_qv14s")
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 3600
limit_bottom = 1100

[node name="OneWayPlatform" parent="." instance=ExtResource("6_buy1g")]
position = Vector2(3136, 768)

[node name="Pickup_upgrade" parent="." instance=ExtResource("7_41y4p")]
position = Vector2(1200, 624)

[node name="Hazard" type="Node2D" parent="."]

[node name="Spike" type="Area2D" parent="Hazard"]
position = Vector2(2536, 1000)
collision_layer = 4
collision_mask = 0
script = ExtResource("8_byl6j")
damage_data = SubResource("Resource_8e3ye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazard/Spike"]
position = Vector2(-8, -4)
shape = SubResource("RectangleShape2D_o5k8c")
debug_color = Color(0.992157, 0, 0.270588, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Hazard/Spike"]
scale = Vector2(0.681128, 0.635475)
texture = SubResource("AtlasTexture_p3wus")

[node name="Spike2" type="Area2D" parent="Hazard"]
position = Vector2(2856, 1000)
collision_layer = 4
collision_mask = 0
script = ExtResource("8_byl6j")
damage_data = SubResource("Resource_8e3ye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazard/Spike2"]
position = Vector2(-8, -4)
shape = SubResource("RectangleShape2D_o5k8c")
debug_color = Color(0.992157, 0, 0.270588, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Hazard/Spike2"]
scale = Vector2(0.681128, 0.635475)
texture = SubResource("AtlasTexture_p3wus")

[node name="Spike3" type="Area2D" parent="Hazard"]
position = Vector2(2856, 736)
collision_layer = 4
collision_mask = 0
script = ExtResource("8_byl6j")
damage_data = SubResource("Resource_8e3ye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazard/Spike3"]
position = Vector2(-136, -4)
shape = SubResource("RectangleShape2D_uo1bh")
debug_color = Color(0.992157, 0, 0.270588, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Hazard/Spike3"]
position = Vector2(-32, -16)
scale = Vector2(0.681128, 0.635475)
texture = SubResource("AtlasTexture_p3wus")
flip_v = true

[node name="Sprite2D2" type="Sprite2D" parent="Hazard/Spike3"]
position = Vector2(-248, -16)
scale = Vector2(0.681128, 0.635475)
texture = SubResource("AtlasTexture_p3wus")
flip_v = true

[node name="NextAreaPath" type="Area2D" parent="." node_paths=PackedStringArray("cinematic_camera", "virtual_camera", "exit_position")]
position = Vector2(3680, 864)
collision_layer = 0
collision_mask = 16
script = ExtResource("11_aj38m")
cinematic_camera = NodePath("../CinematicCamera2D")
virtual_camera = NodePath("../VirtualCamera2D")
exit_position = NodePath("Exit")
this_scene_passage_handle = ExtResource("12_cl1j2")
next_scene_passage_handle = ExtResource("13_oro8f")
this_passage_index = 0
next_passage_target = 2

[node name="Exit" type="Node2D" parent="NextAreaPath"]
position = Vector2(-192, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextAreaPath"]
shape = SubResource("RectangleShape2D_pf2uw")

[node name="Light" type="Sprite2D" parent="NextAreaPath"]
modulate = Color(1, 1, 1, 0.788235)
scale = Vector2(1.15654, 0.500062)
texture = SubResource("CompressedTexture2D_ni1hb")
flip_h = true
